--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="viewport" content="width=device-width">
 	<link href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" rel="stylesheet">
 	<link href="http://twitter.github.io/bootstrap/assets/css/bootstrap-responsive.css" rel="stylesheet">
-	<link rel="stylesheet" href="/css/syntax.css">
-	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="/site/css/syntax.css">
+	<link rel="stylesheet" href="/site/css/main.css">
 </head>
 <body data-spy="scroll">
 
@@ -16,11 +16,11 @@
 <div class="navbar navbar-fixed-top navbar-inverse">
 	<div class="navbar-inner">
 		<div class="container">
-			<a class="brand" href="/">Markdown2</a>
+			<a class="brand" href="/site/">Markdown2</a>
 			<ul class="nav">
-				<li class="active"><a href="/">Home</a></li>
-				<li><a href="/syntax/">Syntax</a></li>
-				<li><a href="/license/">License</a></li>
+				<li class="active"><a href="/site/">Home</a></li>
+				<li><a href="/site/syntax/">Syntax</a></li>
+				<li><a href="/site/license/">License</a></li>
 			</ul>
 		</div>
 	</div>
