Added keyboard shortcuts syntax and twitter buttons.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,21 @@
 
 <header class="header main">
 	<div class="container">
+		<p class="twitts">
+			<a href="https://twitter.com/Markdown_2" class="twitter-follow-button" data-show-count="false">Follow @Markdown_2</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+			<a href="https://twitter.com/intent/tweet?button_hashtag=markdown2&text=Markdown%202%20is%20out!%20Awesome!!" class="twitter-hashtag-button" data-related="Markdown_2" data-url="http://markdown2.github.io/site/">Tweet #markdown2</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+		</p>
+
 		<h1>Time For Markdown 2</h1>
 
-		<p class="lead">Now with video embed, syntax highlights, image aligns, twitter bootstrap styles and much
+		<p class="lead">Now with video embed, syntax highlights, image aligns, twitter bootstrap styles and many
 			more!</p>
+
+		<p></p><a class="btn btn-warning btn-large" href="https://github.com/Markdown2/site/issues"><i class="icon-comment"></i> Ideas? Questions? Problems?</a>
+
 	</div>
 </header>
 <br><br>
