--- a/syntax/Plaseholders/index.html
+++ b/syntax/Plaseholders/index.html
@@ -1,9 +1,13 @@
+<p>Placeholders are invisible marks that add additional fictionality.</p>
+
+<p>Thinking on variants. I want placeholder that even which out parsing is invisible in HTML.</p>
+
 <ul>
 <li>
-<p><code>&lt;!-- md-readmore --&gt;</code> - place to separate file in 2 parts if one part have to be show in the list. This is useful for engined that used markdown to generate blogs or static tsites.</p>
+<p><code>&lt;!--  md-readmore --&gt;</code> - place to separate file into 2 parts if one part have to be show in the list. This is useful for engines that use markdown to generate blogs or static sites.</p>
 </li>
 
 <li>
-<p><code>&lt;!-- md-toc --&gt;</code> - Will generate table of content in the place where placeholder is placed. It will use H1-H6 to create structure and name #anchors.</p>
+<p><code>&lt;!--  md-toc --&gt;</code> - Will generate table of content in the place where placeholder is placed. It will use H1-H3 to create structure and name #anchors.</p>
 </li>
 </ul>
