--- a/source/syntax/index.html
+++ b/source/syntax/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: Markdown2 Syntax
+title: Markdown 2 Syntax
 ---
 <div class="navbar navbar-fixed-top navbar-inverse">
 	<div class="navbar-inner">
 		<div class="container">
-			<a class="brand" href="/">Markdown2</a>
+			<a class="brand" href="/site/">Markdown2</a>
 			<ul class="nav">
-				<li><a href="/">Home</a></li>
-				<li class="active"><a href="/syntax/">Syntax</a></li>
-				<li><a href="/about/">About</a></li>
+				<li><a href="/site/">Home</a></li>
+				<li class="active"><a href="/site/syntax/">Syntax</a></li>
+				<li><a href="/site/license/">License</a></li>
 			</ul>
 		</div>
 	</div>
@@ -17,9 +17,9 @@ title: Markdown2 Syntax
 
 <header class="header">
 	<div class="container">
-		<h1>Markdown2 Syntax</h1>
+		<h1>Markdown 2 Syntax</h1>
 
-		<p class="lead">learn Markdown2 in 5 minutes. Very easy simple but powerful.</p>
+		<p class="lead">learn Markdown 2 in 5 minutes. Very easy simple but powerful.</p>
 	</div>
 </header>
 
