--- a/syntax/Plaseholders/index.html
+++ b/syntax/Plaseholders/index.html
@@ -1,6 +1,4 @@
-<p>Placeholders are invisible marks that add additional fictionality.</p>
-
-<p>Thinking on variants. I want placeholder that even which out parsing is invisible in HTML.</p>
+<p>Placeholders are invisible marks that add additional fictionality. If <code>.md2</code> text document is parsed with Markdown 1 parser, this placeholders are invisible.</p>
 
 <ul>
 <li>
@@ -10,4 +8,26 @@
 <li>
 <p><code>&lt;!--  md-toc --&gt;</code> - Will generate table of content in the place where placeholder is placed. It will use H1-H3 to create structure and name #anchors.</p>
 </li>
+</ul>
+
+<h3 id='comment_systems'>Comment systems</h3>
+
+<ul>
+<li>
+<p><code>&lt;!-- md-disqus shortname=myname --&gt;</code> - insert <a href='http://www.disqus.com'>Disqus</a> comment system.</p>
+</li>
+
+<li>
+<p><code>&lt;!-- md-idebate acct=myname --&gt;</code> - Insert <a href='http://intensedebate.com/'>IntenseDebate</a> comment system.</p>
+</li>
+</ul>
+
+<p>Also posible</p>
+
+<ul>
+<li>Cackle</li>
+
+<li>Facebook</li>
+
+<li>VK</li>
 </ul>
