Added JSbin support in media

--- a/syntax/Configuration/index.html
+++ b/syntax/Configuration/index.html
@@ -7,6 +7,11 @@
  	tables_class=table table-stripped;
  	css=http://mycss.com/bootstrap.css;
  	javascript=http://mycss.com/bootstrap.js;
+ 	author=Sergey Romanov;
+ 	email=myemail@mail.ru;
+ 	gravatar=myemail@mail.ru;
+ 	profile=http://mysite.com;
+ 	date=20013-12-25 00:00:00;
  --&gt;</code></pre>
 
 <p>You can type in one line if you want.</p>
@@ -19,6 +24,7 @@
 </tr><tr><td style='text-align: left;'><code>css</code></td><td style='text-align: left;'>none</td><td style='text-align: left;'>Will import CSS file on the page. You can include few separated by coma.</td>
 </tr><tr><td style='text-align: left;'><code>javascript</code></td><td style='text-align: left;'>none</td><td style='text-align: left;'>Will load external Javascript. You can include few separated by coma.</td>
 </tr><tr><td style='text-align: left;'><code>bootstrap</code></td><td style='text-align: left;'>0</td><td style='text-align: left;'>To load twitter bootstrap CSS vile or not.</td>
+</tr><tr><td style='text-align: left;'><code>date</code></td><td style='text-align: left;'>none</td><td style='text-align: left;'>Publish date. Will be placed at the bottom of document. Time is optional.</td>
 </tr></tbody></table>
 <p><code>css</code> and <code>javascript</code> result example.</p>
 
