--- a/syntax/Media/index.html
+++ b/syntax/Media/index.html
@@ -38,6 +38,19 @@
 </tr><tr><td style='text-align: left;'><img alt='vimeo' src='http://cdn1.iconfinder.com/data/icons/fatcow/32x32/vimeo.png' /></td><td style='text-align: left;'><a href='http://www.vimeo.com'>Vimeo</a></td><td style='text-align: left;'>Vimeo service was chosen because it&#8217;s awesome features like for example domain restriction where video may be played.</td>
 </tr><tr><td style='text-align: left;'><img alt='screencast' src='http://cdn.alternativeto.net/i/be16881a-f0b6-e011-9727-0025902c7e73_12342.png' /></td><td style='text-align: left;'><a href='http://www.screencast.com'>Screencast</a></td><td style='text-align: left;'>screencast.com is a free video hosting that allow to post video with support of quizzes, TOC, internal navigations and many more. You can produce video in <a href='http://www.techsmith.com/camtasia.html'>Camtasia studio</a> which allows to create fully featureable, interactive education videos.</td>
 </tr></tbody></table>
+<h3 id='js_bin'>JS Bin</h3>
+
+<p><strong>Markdown</strong></p>
+
+<pre><code>{media}(jsbin::avamas/4)</code></pre>
+
+<p><strong>Raw HTML</strong></p>
+
+<pre><code>&lt;a class=&quot;jsbin-embed&quot; href=&quot;http://jsbin.com/avamas/4/embed?live&quot;&gt;JS Bin&lt;/a&gt;
+&lt;script src=&quot;http://static.jsbin.com/js/embed.js&quot;&gt;&lt;/script&gt;</code></pre>
+
+<p><strong>Result</strong></p>
+<a class='jsbin-embed' href='http://jsbin.com/avamas/4/embed?live'>JS Bin</a>
 <h3 id='github_gists'>Github Gists</h3>
 
 <p><a href='https://gist.github.com/'>GitHub Gists</a> may allow you to insert syntax highlighted code examples. Although now you can syntax highlight in typography too, gists will пуму you so much more. If you use gists, code sample will be automatically updated in the article when you or someone updated it in gist. This is very handy to have always latest actual code example without worry to update your article.</p>
