--- a/syntax/Media/index.html
+++ b/syntax/Media/index.html
@@ -50,12 +50,12 @@
 &lt;script src=&quot;http://static.jsbin.com/js/embed.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<a class='jsbin-embed' href='http://jsbin.com/avamas/9/embed?live'>JS Bin</a><script src='http://static.jsbin.com/js/embed.js'> </script>
+<a href='http://jsbin.com/avamas/9/embed?live' class='jsbin-embed'>JS Bin</a><script src='http://static.jsbin.com/js/embed.js'> </script>
 <h3 id='codepen'>Codepen</h3>
 
 <p><strong>Markdown</strong></p>
 
-<pre><code>{media}(codepen::vKyFA::300)</code></pre>
+<pre><code>{media}(codepen::nceyw::300)</code></pre>
 
 <p><strong>Raw HTML</strong></p>
 
@@ -63,7 +63,8 @@
 &lt;script  src=&quot;http://codepen.io/assets/embed/ei.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<pre data-type='result' data-user='johnblazek' class='codepen' data-height='300' data-safe='false' data-href='nceyw'><code /><a href='http://codepen.io/johnblazek/pen/nceyw'>Check out this Pen!</a></pre><script src='http://codepen.io/assets/embed/ei.js'> </script>
+<pre data-safe='false' data-href='nceyw' data-height='300' data-type='result' class='codepen' data-user='johnblazek'><code> </code>
+<a href='http://codepen.io/johnblazek/pen/nceyw'>Check out this Pen!</a></pre><script src='http://codepen.io/assets/embed/ei.js'> </script>
 <h3 id='github_gists'>Github Gists</h3>
 
 <p><a href='https://gist.github.com/'>GitHub Gists</a> may allow you to insert syntax highlighted code examples. Although now you can syntax highlight in typography too, gists will пуму you so much more. If you use gists, code sample will be automatically updated in the article when you or someone updated it in gist. This is very handy to have always latest actual code example without worry to update your article.</p>
