--- a/syntax/Media/index.html
+++ b/syntax/Media/index.html
@@ -63,7 +63,7 @@
 &lt;script  src=&quot;http://codepen.io/assets/embed/ei.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<pre data-safe='false' data-href='nceyw' data-height='300' data-type='result' class='codepen' data-user='johnblazek'><code> </code>
+<pre data-type='result' class='codepen' data-safe='false' data-height='300' data-user='johnblazek' data-href='nceyw'><code> </code>
 <a href='http://codepen.io/johnblazek/pen/nceyw'>Check out this Pen!</a></pre><script src='http://codepen.io/assets/embed/ei.js'> </script>
 <h3 id='github_gists'>Github Gists</h3>
 
@@ -77,4 +77,6 @@
 
 <pre><code>&lt;script src=&quot;https://gist.github.com/vdemedes/5220932.js?file=gistfile1.js&quot;&gt;&lt;/script&gt;</code></pre>
 
+<p><strong>Result</strong></p>
+<script src='https://gist.github.com/vdemedes/5220932.js?file=gistfile1.js'> </script>
 <p>File parameter is optional and can be used only in Gists with few files when you want to show only one of them.</p>
