--- a/syntax/Media/index.html
+++ b/syntax/Media/index.html
@@ -40,6 +40,8 @@
 </tr></tbody></table>
 <h3 id='js_bin'>JS Bin</h3>
 
+<p><a href='http://jsbin.com/'>JS Bin</a> is one of the most popular service for creating JS/HTML/CSS snippets or code examples. Very convenient way to insert as demo and HTML, CSS and JS source in single beautiful box.</p>
+
 <p><strong>Markdown</strong></p>
 
 <pre><code>{media}(jsbin::avamas/9)</code></pre>
@@ -50,12 +52,18 @@
 &lt;script src=&quot;http://static.jsbin.com/js/embed.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<a href='http://jsbin.com/avamas/9/embed?live' class='jsbin-embed'>JS Bin</a><script src='http://static.jsbin.com/js/embed.js'> </script>
+<a class='jsbin-embed' href='http://jsbin.com/avamas/9/embed?live'>JS Bin</a><script src='http://static.jsbin.com/js/embed.js'> </script>
 <h3 id='codepen'>Codepen</h3>
+
+<p><a href='http://codepen.io/'>Codepen</a> is another HTML/CSS/JS code example library. It is also very social and you can browse nice examples and use those as inspiration. And if you want to safe one of those right in your text, here it is.</p>
 
 <p><strong>Markdown</strong></p>
 
-<pre><code>{media}(codepen::nceyw::300)</code></pre>
+<pre><code>{media}(codepen::johnblazek::nceyw::300)</code></pre>
+
+<p>First parameter is a user name and second it snippet short code name. last one is the height of the example block. You can find those parameters when you click <em>share</em> button on Codepen website.</p>
+
+<p><img alt='' src='/site/img/codepen.png' /></p>
 
 <p><strong>Raw HTML</strong></p>
 
@@ -63,7 +71,7 @@
 &lt;script  src=&quot;http://codepen.io/assets/embed/ei.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<pre data-type='result' class='codepen' data-safe='false' data-height='300' data-user='johnblazek' data-href='nceyw'><code> </code>
+<pre data-href='nceyw' class='codepen' data-height='300' data-safe='false' data-type='result' data-user='johnblazek'><code> </code>
 <a href='http://codepen.io/johnblazek/pen/nceyw'>Check out this Pen!</a></pre><script src='http://codepen.io/assets/embed/ei.js'> </script>
 <h3 id='github_gists'>Github Gists</h3>
 
