--- a/syntax/Emojis/index.html
+++ b/syntax/Emojis/index.html
@@ -8,5 +8,5 @@
 
 <pre><code>Hello everybody &lt;img src=&quot;http://emojicdn.com/exclamation.png&quot; align=&quot;absmidle&quot; height=&quot;20&quot; width=&quot;20&quot; title=&quot;:exclamation:&quot; alt=&quot;:exclamation:&quot;&gt;</code></pre>
 
-<p><strong>Result</strong> Hello everybody <img src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' align='absmidle' /></p>
+<p><strong>Result</strong> Hello everybody <img width='20' align='absmidle' src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' height='20' /></p>
 <div class='alert alert-warning'>Right now there is not Emoji CDN to serve icons to ayyone, but we are now discussing this posibility. Untill that, this features is questionalbe.</div>
