--- a/syntax/index.html
+++ b/syntax/index.html
@@ -280,7 +280,7 @@
 &lt;script src=&quot;http://static.jsbin.com/js/embed.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<a href='http://jsbin.com/avamas/9/embed?live' class='jsbin-embed'>JS Bin</a><script src='http://static.jsbin.com/js/embed.js'> </script>
+<a class='jsbin-embed' href='http://jsbin.com/avamas/9/embed?live'>JS Bin</a><script src='http://static.jsbin.com/js/embed.js'> </script>
 <h3 id='codepen'>Codepen</h3>
 
 <p><a href='http://codepen.io/'>Codepen</a> is another HTML/CSS/JS code example library. It is also very social and you can browse nice examples and use those as inspiration. And if you want to safe one of those right in your text, here it is.</p>
@@ -299,7 +299,7 @@
 &lt;script  src=&quot;http://codepen.io/assets/embed/ei.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<pre data-height='300' data-type='result' data-user='johnblazek' class='codepen' data-href='nceyw' data-safe='false'><code> </code>
+<pre data-href='nceyw' data-safe='false' data-type='result' class='codepen' data-height='300' data-user='johnblazek'><code> </code>
 <a href='http://codepen.io/johnblazek/pen/nceyw'>Check out this Pen!</a></pre><script src='http://codepen.io/assets/embed/ei.js'> </script>
 <h3 id='github_gists'>Github Gists</h3>
 
@@ -419,7 +419,7 @@ Awesome way to create text to HTML documents.
 
 <pre><code>Hello everybody &lt;img src=&quot;http://emojicdn.com/exclamation.png&quot; align=&quot;absmidle&quot; height=&quot;20&quot; width=&quot;20&quot; title=&quot;:exclamation:&quot; alt=&quot;:exclamation:&quot;&gt;</code></pre>
 
-<p><strong>Result</strong> Hello everybody <img src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' align='absmidle' /></p>
+<p><strong>Result</strong> Hello everybody <img width='20' align='absmidle' src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' height='20' /></p>
 <div class='alert alert-warning'>Right now there is not Emoji CDN to serve icons to ayyone, but we are now discussing this posibility. Untill that, this features is questionalbe.</div>
 			</section>
 			
