Another emoji fix

--- a/syntax/index.html
+++ b/syntax/index.html
@@ -299,7 +299,7 @@
 &lt;script  src=&quot;http://codepen.io/assets/embed/ei.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<pre data-href='nceyw' data-safe='false' data-type='result' class='codepen' data-height='300' data-user='johnblazek'><code> </code>
+<pre data-safe='false' data-height='300' data-user='johnblazek' class='codepen' data-type='result' data-href='nceyw'><code> </code>
 <a href='http://codepen.io/johnblazek/pen/nceyw'>Check out this Pen!</a></pre><script src='http://codepen.io/assets/embed/ei.js'> </script>
 <h3 id='github_gists'>Github Gists</h3>
 
@@ -419,7 +419,9 @@ Awesome way to create text to HTML documents.
 
 <pre><code>Hello everybody &lt;img src=&quot;http://emojicdn.com/exclamation.png&quot; align=&quot;absmidle&quot; height=&quot;20&quot; width=&quot;20&quot; title=&quot;:exclamation:&quot; alt=&quot;:exclamation:&quot;&gt;</code></pre>
 
-<p><strong>Result</strong> Hello everybody <img width='20' align='absmidle' src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' height='20' /></p>
+<p><strong>Result</strong></p>
+
+<p>Hello everybody <img align='absmidle' src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' width='20' height='20' /></p>
 <div class='alert alert-warning'>Right now there is not Emoji CDN to serve icons to ayyone, but we are now discussing this posibility. Untill that, this features is questionalbe.</div>
 			</section>
 			
