Fixed alternative table

--- a/syntax/Typography/index.html
+++ b/syntax/Typography/index.html
@@ -103,7 +103,15 @@
 
 <h2 id='table'>Table</h2>
 
-<p>Although there already is table syntax, to be true it is absolutely unreadable in HTML format. I mean it might looks good for small table but for table with cells where you want to insert code examples or even few paragraphs it turn into complete mess or merely at all impossible.</p>
+<p>Although there already is table syntax, to be true it is absolutely unreadable in plain text format. I mean it might looks good for small table like this.</p>
+
+<pre><code>Name  | Lunch order | Spicy  | Owes
+------| ----------- | ------ | -----:
+Joan  | saag paneer | medium | $11
+Sally | vindaloo    | mild   | $14
+Erin  | lamb madras | HOT    | $5</code></pre>
+
+<p>But for table where cell text may exceed one line in plain text it looks messy. And if you want to insert code examples or few paragraphs it become merely at all impossible.</p>
 
 <p>This is why we wan to create readable alternative table layout.</p>
 
@@ -121,7 +129,9 @@ Description: This method insert values into page. It accept `$list` parameter.
 Here is the example
 	
 	&lt;?php  insert(array($page, $header)); ?&gt;
+	
 |===========================|
+
 Method Name: `delete()`
 Description: This method deletes given element.
 
