--- a/syntax/Media/index.html
+++ b/syntax/Media/index.html
@@ -52,7 +52,7 @@
 &lt;script src=&quot;http://static.jsbin.com/js/embed.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<a class='jsbin-embed' href='http://jsbin.com/avamas/9/embed?live'>JS Bin</a><script src='http://static.jsbin.com/js/embed.js'> </script>
+<a href='http://jsbin.com/avamas/9/embed?live' class='jsbin-embed'>JS Bin</a><script src='http://static.jsbin.com/js/embed.js'> </script>
 <h3 id='codepen'>Codepen</h3>
 
 <p><a href='http://codepen.io/'>Codepen</a> is another HTML/CSS/JS code example library. It is also very social and you can browse nice examples and use those as inspiration. And if you want to safe one of those right in your text, here it is.</p>
@@ -71,7 +71,7 @@
 &lt;script  src=&quot;http://codepen.io/assets/embed/ei.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<pre data-type='result' class='codepen' data-href='nceyw' data-user='johnblazek' data-height='300' data-safe='false'><code> </code>
+<pre data-type='result' data-safe='false' data-user='johnblazek' data-href='nceyw' class='codepen' data-height='300'><code> </code>
 <a href='http://codepen.io/johnblazek/pen/nceyw'>Check out this Pen!</a></pre><script src='http://codepen.io/assets/embed/ei.js'> </script>
 <h3 id='github_gists'>Github Gists</h3>
 
