--- a/syntax/index.html
+++ b/syntax/index.html
@@ -184,7 +184,15 @@
 
 <h2 id='table'>Table</h2>
 
-<p>Although there already is table syntax, to be true it is absolutely unreadable in HTML format. I mean it might looks good for small table but for table with cells where you want to insert code examples or even few paragraphs it turn into complete mess or merely at all impossible.</p>
+<p>Although there already is table syntax, to be true it is absolutely unreadable in plain text format. I mean it might looks good for small table like this.</p>
+
+<pre><code>Name  | Lunch order | Spicy  | Owes
+------| ----------- | ------ | -----:
+Joan  | saag paneer | medium | $11
+Sally | vindaloo    | mild   | $14
+Erin  | lamb madras | HOT    | $5</code></pre>
+
+<p>But for table where cell text may exceed one line in plain text it looks messy. And if you want to insert code examples or few paragraphs it become merely at all impossible.</p>
 
 <p>This is why we wan to create readable alternative table layout.</p>
 
@@ -202,7 +210,9 @@ Description: This method insert values into page. It accept `$list` parameter.
 Here is the example
 	
 	&lt;?php  insert(array($page, $header)); ?&gt;
+	
 |===========================|
+
 Method Name: `delete()`
 Description: This method deletes given element.
 
@@ -422,7 +432,7 @@ Description: This method deletes given element.</code></pre>
 &lt;script src=&quot;http://static.jsbin.com/js/embed.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<a class='jsbin-embed' href='http://jsbin.com/avamas/9/embed?live'>JS Bin</a><script src='http://static.jsbin.com/js/embed.js'> </script>
+<a href='http://jsbin.com/avamas/9/embed?live' class='jsbin-embed'>JS Bin</a><script src='http://static.jsbin.com/js/embed.js'> </script>
 <h3 id='codepen'>Codepen</h3>
 
 <p><a href='http://codepen.io/'>Codepen</a> is another HTML/CSS/JS code example library. It is also very social and you can browse nice examples and use those as inspiration. And if you want to safe one of those right in your text, here it is.</p>
@@ -441,7 +451,7 @@ Description: This method deletes given element.</code></pre>
 &lt;script  src=&quot;http://codepen.io/assets/embed/ei.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<pre data-type='result' class='codepen' data-href='nceyw' data-user='johnblazek' data-height='300' data-safe='false'><code> </code>
+<pre data-type='result' data-safe='false' data-user='johnblazek' data-href='nceyw' class='codepen' data-height='300'><code> </code>
 <a href='http://codepen.io/johnblazek/pen/nceyw'>Check out this Pen!</a></pre><script src='http://codepen.io/assets/embed/ei.js'> </script>
 <h3 id='github_gists'>Github Gists</h3>
 
@@ -563,7 +573,7 @@ Awesome way to create text to HTML documents.
 
 <p><strong>Result</strong></p>
 
-<p>Hello everybody <img align='absmidle' src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' width='20' height='20' /></p>
+<p>Hello everybody <img src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' align='absmidle' height='20' width='20' /></p>
 <div class='alert alert-warning'>Right now there is not Emoji CDN to serve icons to ayyone, but we are now discussing this posibility. Untill that, this features is questionalbe.</div>
 			</section>
 			
