Added tools section and official logo.

--- a/source/syntax/index.html
+++ b/source/syntax/index.html
@@ -9,6 +9,7 @@ title: Markdown 2 Syntax
 			<ul class="nav">
 				<li><a href="/site/">Home</a></li>
 				<li class="active"><a href="/site/syntax/">Syntax</a></li>
+				<li><a href="/site/tools/">Tools</a></li>
 				<li><a href="/site/license/">License</a></li>
 			</ul>
 		</div>
