--- a/source/tools/index.html
+++ b/source/tools/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Markdown 2 Tools
 ---
 <div class="navbar navbar-fixed-top navbar-inverse">
 	<div class="navbar-inner">
@@ -8,22 +9,24 @@ layout: default
 			<ul class="nav">
 				<li><a href="/site/">Home</a></li>
 				<li><a href="/site/syntax/">Syntax</a></li>
-				<li><a href="/site/tools/">Tools</a></li>
-				<li class="active"><a href="/site/license/">License</a></li>
+				<li class="active"><a href="/site/tools/">Tools</a></li>
+				<li><a href="/site/license/">License</a></li>
 			</ul>
 		</div>
 	</div>
 </div>
 
-
 <header class="header">
 	<div class="container">
-		<h1>{{ page.title }}</h1>
+		<h1>Markdown 2 Tools</h1>
 
-		<p class="lead">{{ page.lead }}</p>
+		<p class="lead">What you can use Markdown 2 with.</p>
 	</div>
 </header>
 
 <div class="container">
-	{{ content }}
+<br>
+	{% capture m %}{% include tools.md %}{% endcapture %}
+	{{ m | markdownify }}
 </div>
+{{ markdownify }}
