added tools section and logo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<ul class="nav">
 				<li class="active"><a href="/site/">Home</a></li>
 				<li><a href="/site/syntax/">Syntax</a></li>
+				<li><a href="/site/tools/">Tools</a></li>
 				<li><a href="/site/license/">License</a></li>
 			</ul>
 		</div>
@@ -35,6 +36,8 @@
 			<a href="https://twitter.com/intent/tweet?button_hashtag=markdown2&text=Markdown%202%20is%20out!%20Awesome!!" class="twitter-hashtag-button" data-related="Markdown_2" data-url="http://markdown2.github.io/site/">Tweet #markdown2</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 		</p>
+
+		<img src="/site/img/m2icon-for-site.png" alt="Markdown 2 logo"/>
 
 		<h1>Time For Markdown 2</h1>
 
