--- a/license/index.html
+++ b/license/index.html
@@ -20,6 +20,7 @@
 			<ul class="nav">
 				<li><a href="/site/">Home</a></li>
 				<li><a href="/site/syntax/">Syntax</a></li>
+				<li><a href="/site/tools/">Tools</a></li>
 				<li class="active"><a href="/site/license/">License</a></li>
 			</ul>
 		</div>
