--- a/syntax/Media/index.html
+++ b/syntax/Media/index.html
@@ -71,7 +71,7 @@
 &lt;script  src=&quot;http://codepen.io/assets/embed/ei.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<pre data-type='result' data-safe='false' data-user='johnblazek' data-href='nceyw' class='codepen' data-height='300'><code> </code>
+<pre data-href='nceyw' data-safe='false' data-type='result' data-user='johnblazek' data-height='300' class='codepen'><code> </code>
 <a href='http://codepen.io/johnblazek/pen/nceyw'>Check out this Pen!</a></pre><script src='http://codepen.io/assets/embed/ei.js'> </script>
 <h3 id='github_gists'>Github Gists</h3>
 
