--- a/syntax/Typography/index.html
+++ b/syntax/Typography/index.html
@@ -65,6 +65,18 @@
 
 <li><code>[Windows]</code></li>
 
+<li><code>[Tab]</code></li>
+
+<li><code>[Backspace]</code></li>
+
+<li><code>[Insert]</code></li>
+
+<li><code>[Delete]</code></li>
+
+<li><code>[Enter]</code></li>
+
+<li><code>[F(1-16)]</code></li>
+
 <li><code>[Ctrl *]</code></li>
 
 <li><code>[Alt *]</code></li>
