--- a/syntax/Emojis/index.html
+++ b/syntax/Emojis/index.html
@@ -1,4 +1,4 @@
-<p>Emojis (emoticons) is the set of icons to express emotions. please look <a href='http://www.emoji-cheat-sheet.com/'>cheatshit</a> here.</p>
+<p>Emojis (emoticons) is the set of icons to express emotions. please look <a href='http://www.emoji-cheat-sheet.com/'>cheatsheet</a> here.</p>
 
 <p><strong>Markdown</strong></p>
 
@@ -10,5 +10,5 @@
 
 <p><strong>Result</strong></p>
 
-<p>Hello everybody <img src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' align='absmidle' height='20' width='20' /></p>
+<p>Hello everybody <img height='20' align='absmidle' src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' width='20' /></p>
 <div class='alert alert-warning'>Right now there is not Emoji CDN to serve icons to ayyone, but we are now discussing this posibility. Untill that, this features is questionalbe.</div>
