--- a/syntax/index.html
+++ b/syntax/index.html
@@ -20,6 +20,7 @@
 			<ul class="nav">
 				<li><a href="/site/">Home</a></li>
 				<li class="active"><a href="/site/syntax/">Syntax</a></li>
+				<li><a href="/site/tools/">Tools</a></li>
 				<li><a href="/site/license/">License</a></li>
 			</ul>
 		</div>
@@ -145,6 +146,18 @@
 <li><code>[Command]</code></li>
 
 <li><code>[Windows]</code></li>
+
+<li><code>[Tab]</code></li>
+
+<li><code>[Backspace]</code></li>
+
+<li><code>[Insert]</code></li>
+
+<li><code>[Delete]</code></li>
+
+<li><code>[Enter]</code></li>
+
+<li><code>[F(1-16)]</code></li>
 
 <li><code>[Ctrl *]</code></li>
 
@@ -451,7 +464,7 @@ Description: This method deletes given element.</code></pre>
 &lt;script  src=&quot;http://codepen.io/assets/embed/ei.js&quot;&gt;&lt;/script&gt;</code></pre>
 
 <p><strong>Result</strong></p>
-<pre data-type='result' data-safe='false' data-user='johnblazek' data-href='nceyw' class='codepen' data-height='300'><code> </code>
+<pre data-href='nceyw' data-safe='false' data-type='result' data-user='johnblazek' data-height='300' class='codepen'><code> </code>
 <a href='http://codepen.io/johnblazek/pen/nceyw'>Check out this Pen!</a></pre><script src='http://codepen.io/assets/embed/ei.js'> </script>
 <h3 id='github_gists'>Github Gists</h3>
 
@@ -561,7 +574,7 @@ Awesome way to create text to HTML documents.
 				<div class="page-header">
 					<h1>Emojis</h1>
 				</div>
-				<p>Emojis (emoticons) is the set of icons to express emotions. please look <a href='http://www.emoji-cheat-sheet.com/'>cheatshit</a> here.</p>
+				<p>Emojis (emoticons) is the set of icons to express emotions. please look <a href='http://www.emoji-cheat-sheet.com/'>cheatsheet</a> here.</p>
 
 <p><strong>Markdown</strong></p>
 
@@ -573,7 +586,7 @@ Awesome way to create text to HTML documents.
 
 <p><strong>Result</strong></p>
 
-<p>Hello everybody <img src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' align='absmidle' height='20' width='20' /></p>
+<p>Hello everybody <img height='20' align='absmidle' src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' width='20' /></p>
 <div class='alert alert-warning'>Right now there is not Emoji CDN to serve icons to ayyone, but we are now discussing this posibility. Untill that, this features is questionalbe.</div>
 			</section>
 			
