Adding markdown2.org domain

--- a/syntax/Emojis/index.html
+++ b/syntax/Emojis/index.html
@@ -10,5 +10,5 @@
 
 <p><strong>Result</strong></p>
 
-<p>Hello everybody <img height='20' align='absmidle' src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' width='20' /></p>
+<p>Hello everybody <img src='https://a248.e.akamai.net/assets.github.com/images/icons/emoji/exclamation.png' align='absmidle' width='20' height='20' /></p>
 <div class='alert alert-warning'>Right now there is not Emoji CDN to serve icons to ayyone, but we are now discussing this posibility. Untill that, this features is questionalbe.</div>
